--- a/.github/workflows/pipeline-azure.yaml
+++ b/.github/workflows/pipeline-azure.yaml
@@ -1,46 +1,41 @@
-name: Azure pipeline
+name: IaC Pipeline
 
 on:
   push:
     branches:
     - main
 
+env:
+  TERRAFORM_VERSION  : 1.9.7
+  ARM_CLIENT_ID      : ${{ secrets.ARM_CLIENT_ID }}
+  ARM_CLIENT_SECRET  : ${{ secrets.ARM_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID      : ${{ secrets.ARM_TENANT_ID }}
+
 jobs:
 
-  tf-run:
-    name: Terraform on Azure
+  CI-test:
+    name: Test
     runs-on: ubuntu-latest
- 
     steps:
-
-    - name: Step 01 - Terraform Setup
-      uses: hashicorp/setup-terraform@v2
+    - uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: 1.6.1
+        terraform_version: $TERRAFORM_VERSION
+    - uses: actions/checkout@v4
+    - run : terraform -chdir=./terraform/azure init
+    - run : terraform -chdir=./terraform/azure validate
 
-    - name: Step 02 - Terraform Version
-      run : terraform --version
-
-    - name: Step 03 - CheckOut GitHub Repo
-      uses: actions/checkout@v3
-
-    - name: Step 04 - Authenticate with Azure
-      uses: azure/login@v1
+  CD-deploy:
+    name: Deploy
+    needs: CI-test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: hashicorp/setup-terraform@v3
       with:
-        creds: '${{ secrets.AZURE_CREDENTIALS }}'
-
-    - name: Step 05 - Terraform Init
-      run : terraform -chdir=./terraform init -input=false
-
-    - name: Step 06 - Terraform Validate
-      run : terraform -chdir=./terraform validate
-
-    - name: Step 07 - Terraform Plan
-      run : terraform -chdir=./terraform plan -input=false -out tfplan
-      # run : terraform -chdir=./terraform plan -input=false -destroy -out tfplan
-
-    - name: Step 08 - Terraform Apply
-      run : terraform -chdir=./terraform apply -auto-approve -input=false tfplan
-
-    - name: Step 09 - Terraform Show
-      run : terraform -chdir=./terraform show
+        terraform_version: $TERRAFORM_VERSION
+    - uses: actions/checkout@v4
+    - run : terraform -chdir=./terraform/azure init
+    - run : terraform -chdir=./terraform/azure plan -destroy -out tfplan
+    - run : terraform -chdir=./terraform/azure apply tfplan
+    - run : terraform -chdir=./terraform/azure show
+    
