--- a/.github/workflows/pipeline-azure.yaml
+++ b/.github/workflows/pipeline-azure.yaml
@@ -22,8 +22,8 @@ jobs:
       with:
         terraform_version: $TERRAFORM_VERSION
     - uses: actions/checkout@v4
-    - run : terraform -chdir=./terraform/azure init
-    - run : terraform -chdir=./terraform/azure validate
+    - run : terraform -chdir=./terraform/ init
+    - run : terraform -chdir=./terraform/ validate
 
   CD-deploy:
     name: Deploy
@@ -34,8 +34,8 @@ jobs:
       with:
         terraform_version: $TERRAFORM_VERSION
     - uses: actions/checkout@v4
-    - run : terraform -chdir=./terraform/azure init
-    - run : terraform -chdir=./terraform/azure plan -out tfplan
-    - run : terraform -chdir=./terraform/azure apply tfplan
-    - run : terraform -chdir=./terraform/azure show
+    - run : terraform -chdir=./terraform init
+    - run : terraform -chdir=./terraform plan -out tfplan
+    - run : terraform -chdir=./terraform apply tfplan
+    - run : terraform -chdir=./terraform show
     
